--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     ],
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "strict": true
+    "strict": true,
+    "noImplicitAny": false,
+    "useUnknownInCatchVariables": false
   },
   "include": [
     "src/**/*.ts"
